Fix background in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -232,10 +232,6 @@ body {
     --error-background: #710000;
   }
 
-  #root {
-    background: black;
-  }
-
   a {
     color: #8585ff;
   }
